# server

./: .gitignore  CMakeLists.txt  assemble.sh  manual.md
TCP/: CMakeLists.txt  server_config.json
TCP/lib/: CMakeLists.txt
TCP/lib/include/: asynchronous_server.h  server_handler.h  synchronous_server.h
TCP/lib/src/: asynchronous_server.cpp  server_handler.cpp  synchronous_server.cpp
TCP/src/: main.cpp
